--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,13 @@
     font-family: 'Roboto', sans-serif;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 section{
     background-color: rgb(245, 245, 245);
+    transition: all 300ms ease;
 }
 
 input,
@@ -21,6 +26,16 @@ textarea{
     border-left: none;
     border-right: none;
     height: 40px;
+    transition: all 300ms ease;
+}
+
+input:hover, textarea:hover{
+    border-color: #dcdfe6;
+
+}
+
+input:focus, textarea:focus{
+    border-color: #f06449;
 }
 
 textarea{
@@ -87,6 +102,7 @@ button{
 
 .click{
     transition: all 200ms ease;
+    cursor: pointer;
 }
 
 .click:hover{
@@ -125,6 +141,54 @@ button{
     width: 100%;
 }
 
+nav,
+.scroll,
+.header {
+    opacity: 1;
+    visibility: visible;
+    transition: all 600ms 800ms;
+}
+
+.modal--open nav,
+.modal--open .scroll,
+.modal--open .header {
+    opacity: 0;
+    visibility: hidden;
+    transition: all 400ms;
+}
+
+.dark-theme .title,
+.dark-theme .section__title,
+.dark-theme .section__sub-title,
+.dark-theme .nav__link--anchor,
+.dark-theme .fa-circle-half-stroke,
+.dark-theme .header__para
+{
+    color: white;
+
+}
+
+.dark-theme section{
+    background-color: #242424;
+}
+
+.dark-theme #personal-logo{
+    filter: none;
+}
+
+.dark-theme .scroll__icon{
+    border-color: white;
+}
+
+.dark-theme .scroll__icon:after,
+.dark-theme .link__hover-effect:after{
+    background-color: white;
+}
+
+.dark-theme .mail__btn{
+    background-color: white;
+    color: #242424;
+}
 
 
 /* LANDING */
@@ -179,6 +243,10 @@ button{
     position: absolute;
     bottom: 32px;
     right: 40px;
+    z-index: 59;
+    position: fixed;
+    transition: z-index 10ms ease;
+    box-shadow: 0 12px 30px 0 rgb(0,0,0,0.28);
 }
 
 .scroll{
@@ -260,6 +328,10 @@ nav{
 
 /* PROJECTS */
 
+.project{
+    margin-bottom: 80px;
+}
+
 .project__img{
     width: 100%;
     transition: all 500ms ease;
@@ -327,6 +399,17 @@ nav{
 
 /* MODAL */
 
+.modal--open .modal{
+    z-index: 60;
+    box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
+    visibility: visible;
+}
+
+.modal--open .modal__about,
+.modal--open .modal__contact{
+    transform: translateX(0%);
+}
+
 .modal{
     position: absolute;
     top: 50%;
@@ -335,22 +418,27 @@ nav{
     width: 90%;
     max-width: 1100px;
     height: 500px;
-    box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
     border-radius: 20px;
     overflow: hidden;
     display: flex;
+    visibility: hidden;
+    z-index: -1;
+    transition: visibility 1s, z-index 1s, box-shadow 0.5s ease;
 }
 
 .modal__half{
     width: 50%;
     padding: 40px 72px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+    transition: all 300ms ease-in;
 }
 
 .modal__about{
     background-color: rgb(245, 245, 245);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    transform: translateX(-110%);
 }
 
 .modal__title{
@@ -359,6 +447,7 @@ nav{
 
 .modal__sub-title{
     margin: 12px 0 24px 0;
+    font-size: 14px;
 }
 
 .modal__para{
@@ -404,12 +493,87 @@ nav{
 .modal__contact{
     background-color: #242424;
     color: white;
+    transform: translateX(110%);
+}
+
+.modal__overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    z-index: -1;
+}
+
+.modal__overlay--loading{
+    background-color: #242424;
+    font-size: 80px;
+    z-index: -1;
+}
+
+.modal__overlay--visible{
+    z-index: 1;
+    display: flex;
+}
+
+.fa-spinner{
+    animation: spinner 750ms infinite linear;
+}
+
+@keyframes spinner {
+    0%{
+        transform: rotate(0);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
+.modal__overlay--success{
+    background-color: #4bb543;
+    font-size: 40px;
+    font-weight: 700;
+    text-align: center;
+    padding: 28px;
+}
+
+.modal__exit{
+    position: absolute;
+    top: 30px;
+    right: 40px;
+    color: #fff;
+    font-size: 36px;
+    z-index: 100;
 }
 
 .form__item{
     margin-bottom: 20px;
 }
 
+.form__submit{
+    background-color: #f06449;
+    border: 2px solid #f06449;
+    color: white;
+    font-weight: 700;
+    font-size: 20px;
+    width: 100%;
+    max-width: 240px;
+    padding: 12px 24px;
+    transition: all 300ms ease;
+}
+
+.form__submit:hover{
+    border-color: #fff;
+    background-color: transparent;
+}
+
+.form__submit:active{
+    color: #f06449;
+    border-color: #f06449;
+}
 
 
 /* FOOTER */
@@ -418,6 +582,7 @@ footer{
     background-color: #242424;
     display: flex;
     padding: 6% 0;
+    position: relative;
 }
 
 .footer__row{
@@ -442,4 +607,99 @@ footer{
 .footer__social--link,
 .footer__copyright{
     color: white;
+}
+
+/*
+SHAPES
+*/
+
+.shape{
+    position: fixed;
+    height: 14px;
+    width: 14px;
+}
+
+.shape--0{
+    top: 15vh;
+    left: 5vw;
+}
+.shape--1{
+    top: 15vh;
+    left: 50vw;
+}
+.shape--2{
+    top: 15vh;
+    left: 80vw;
+}
+.shape--3{
+    top: 50vh;
+    left: 5vw;
+}
+.shape--4{
+    top: 50vh;
+    left: 50vw;
+}
+.shape--5{
+    top: 50vh;
+    left: 80vw;
+}
+.shape--6{
+    top: 80vh;
+    left: 5vw;
+}
+.shape--7{
+    top: 80vh;
+    left: 50vw;
+}
+.shape--8{
+    top: 80vh;
+    left: 80vw;
+}
+
+@media(max-width: 768px) {
+    .title{
+        font-size: 80px;
+    }
+    .header__para{
+        font-size: 20px;
+    }
+    .modal{
+        top: 0;
+        left: 0;
+        transform: none;
+        height: auto;
+        width: 100%;
+        flex-direction: column-reverse;
+        border-radius: 0;
+    }
+    .modal__half{
+        width: 100%;
+    }
+}
+
+@media(max-width: 480px) {
+    .title{
+        font-size: 52px;
+    }
+    .header__para{
+        font-size: 18px;
+    }
+    .nav__link:first-child{
+        display: none;
+    }
+    .project__description{
+        left: 0;
+        padding: 0;
+        width: 100%;
+        text-align: center;
+    }
+    .project__description--para{
+        display: none;
+    }
+    .project__description--sub-title{
+        margin-bottom: 8px;
+    }
+    .modal__half{
+        padding: 40px;
+    }
 }
