--- a/styles.css
+++ b/styles.css
@@ -304,7 +304,7 @@ nav{
 #personal-logo{
     width: 50px;
     height: 50px;
-    background-color: white;
+    background-color: rgb(245, 245, 245);
     filter: invert(1);
 }
 
@@ -461,7 +461,7 @@ nav{
 }
 
 .modal__language{
-    width: 50%;
+    width: 25%;
     padding: 16px;
     position: relative;
     display: flex;
@@ -615,8 +615,8 @@ SHAPES
 
 .shape{
     position: fixed;
-    height: 14px;
-    width: 14px;
+    height: 30px;
+    width: 30px;
 }
 
 .shape--0{
@@ -656,6 +656,12 @@ SHAPES
     left: 80vw;
 }
 
+@media(max-width: 1000px){
+    .modal__language{
+        width: 40%;
+    }
+}
+
 @media(max-width: 768px) {
     .title{
         font-size: 80px;
@@ -674,6 +680,9 @@ SHAPES
     }
     .modal__half{
         width: 100%;
+    }
+    .modal__language--img{
+        width: 60%;
     }
 }
 
