--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ textarea {
   height: 24px;
   transition: all 300ms ease;
   margin-top: 16px;
+  font-size: 16px;
 }
 
 input:hover,
@@ -302,9 +303,8 @@ nav {
 }
 
 #personal-logo {
-  width: 50px;
-  height: 50px;
-  background-color: rgb(245, 245, 245);
+  width: 80px;
+  height: 80px;
   filter: invert(1);
 }
 
